Updated with title

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="shape_3">Shape 3</string>
     <string name="shape_2">Shape 2</string>
     <string name="shape_1">Shape 1</string>
+    <string name="main_title">Welcome to \n 3rd Grade Math Quiz</string>
 </resources>
